--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,24 @@
+<!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
   <title>Project #2</title>
 </head>
-
+<script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.8/dist/handlebars.min.js"></script>
 <body>
   <div class="">
     <header class="">
-      <h1>
-        Project #2
-      </h1>
+      <nav class="">
+        <a href="#" class="Logo">ClimateCloset</a>
+        <ul>
+            <li>
+              <a href="#" class="">About</a>
+            </li>
+
+            <li>
+              <a href="" class="">login</a>
+            </li>
+        </ul>
+    </nav>
     </header>
       <main class="">
         {{{ body }}}
