got the login page working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
           <nav>
             <ul class="flex space-x-64 py-6 ">
                 <li>
-                  <a href="#" class="">About</a>
+                  <a href="#" class="">Wardrobe reccommendations based on the weather!</a>
                 </li>
 
                 <li>
@@ -24,6 +24,12 @@
     </div>
   </header>
   
+            <li>
+              <a href="/login" class="">Click here to Login</a>
+            </li>
+        </ul>
+    </nav>
+    </header>
       <main class="">
         {{{ body }}}
       </main>
