got the login page working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,11 @@
         <a href="#" class="Logo">ClimateCloset</a>
         <ul>
             <li>
-              <a href="#" class="">About</a>
+              <a href="#" class="">Wardrobe reccommendations based on the weather!</a>
             </li>
 
             <li>
-              <a href="" class="">login</a>
+              <a href="/login" class="">Click here to Login</a>
             </li>
         </ul>
     </nav>
