adding more handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,22 +4,26 @@
   <title>Project #2</title>
 </head>
 <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.8/dist/handlebars.min.js"></script>
-<body>
-  <div class="">
+<body class="bg-black">
+  <div class=" text-white border-b-4">
     <header class="">
-      <nav class="">
-        <a href="#" class="Logo">ClimateCloset</a>
-        <ul>
-            <li>
-              <a href="#" class="">About</a>
-            </li>
+      <section class="text-4xl flex space-x-96 pb-4">
+        <img href="../../public/images/IMG_2195.png">
+          <nav>
+            <ul class="flex space-x-64 py-6 ">
+                <li>
+                  <a href="#" class="">About</a>
+                </li>
 
-            <li>
-              <a href="" class="">login</a>
-            </li>
-        </ul>
-    </nav>
-    </header>
+                <li>
+                  <a href="" class="">login</a>
+                </li>
+            </ul>
+          </nav> 
+      </section> 
+    </div>
+  </header>
+  
       <main class="">
         {{{ body }}}
       </main>
