fixed the image

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
   <div class=" text-white border-b-4">
     <header class="">
       <section class="text-4xl flex space-x-96 pb-4">
-        <img href="../../public/images/IMG_2195.png">
+        <img src="../../public/images/IMG_2195.png">
           <nav>
             <ul class="flex space-x-64 py-6 ">
                 <li>
