login is now loading profile. I added more habdlebars pages and routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
-  <title>Project #2</title>
+  <title>Climate Closet</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.8/dist/handlebars.min.js"></script>
 <body>
   <div class="">
     <header class="">
       <nav class="">
-        <a href="#" class="Logo">ClimateCloset</a>
-        <ul>
-            <li>
-              <a href="#" class="">Wardrobe reccommendations based on the weather!</a>
-            </li>
-
-            <li>
-              <a href="/login" class="">Click here to Login</a>
-            </li>
-        </ul>
+        <h1 class="Logo">ClimateCloset</h1>
+        <p>Page Subtitle</p>
     </nav>
     </header>
       <main class="">
