login is now loading profile. I added more habdlebars pages and routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
-  <title>Project #2</title>
+  <title>Climate Closet</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.8/dist/handlebars.min.js"></script>
 <body class="bg-black">
