syncing for end of class

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,28 +9,11 @@
   <div class=" text-white border-b-4">
     <header class="">
       <section class="text-4xl flex space-x-96 pb-4">
-        <img src="../../public/images/IMG_2195.png">
-          <nav>
-            <ul class="flex space-x-64 py-6 ">
-                <li>
-                  <a href="#" class="">Wardrobe reccommendations based on the weather!</a>
-                </li>
-
-                <li>
-                  <a href="" class="">login</a>
-                </li>
-            </ul>
-          </nav> 
+        <img src="../../public/images/IMG_2195.png" alt="ClimateClosetLogo">
       </section> 
     </div>
   </header>
-  
-            <li>
-              <a href="/login" class="">Click here to Login</a>
-            </li>
-        </ul>
-
-    </nav>
+  <h1>Climate Closet</h1>
     </header>
       <main class="">
         {{{ body }}}
