adding to views pages and resolving sign in errors

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
   <div class=" text-white border-b-4">
     <header class="">
       <section class="text-4xl flex space-x-96 pb-4">
-        <img src="../../public/images/IMG_2195.png" alt="ClimateClosetLogo">
+        {{!-- <img src="../../public/images/IMG_2195.png" alt="ClimateClosetLogo"> --}}
       </section> 
     </div>
   </header>
