--- a/views/customize.handlebars
+++ b/views/customize.handlebars
@@ -1,3 +1,26 @@
-<div>Enter your location</div>
-<div>Enter Your gender</div>
-<div>Enter your style</div>
+{{!-- This form will ask the user for their preferences --}}
+<div class="col-md-6">
+    <h2>Customize Profile</h2>
+
+    <form class="form customize-form">
+      <div class="form-group">
+        <label for="location">Location:</label>
+        <input class="form-input" type="text" id="location" />
+      </div>
+      <div class="form-group">
+        <label for="gender">Gender:</label>
+        <input class="form-input" type="text" id="gender" />
+      </div>
+      <div class="form-group">
+        <label for="style">Style:</label>
+        <input class="form-input" type="text" id="style" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Submit</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+
+<script src="./js/customize.js"></script>
