adding more styling and hamburger

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,15 @@
-<a href="/login" class="">Click here to Login</a>
+<div class="navbar">
+  <div class="container nav-container">
+    <input class="checkbox" type="checkbox" name="" id="" />
+    <div class="hamburger-lines">
+      <span class="line line1"></span>
+      <span class="line line2"></span>
+      <span class="line line3"></span>
+    </div>  
+  <div class="menu-items">
+    <h1>RECENT SEARCHES</h1>
+        <ul>
+            <li><a href="#">search #1</a></li>
+            <li><a href="#">search #2</a></li>
+        </ul>
+  </div>
