--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,14 +6,14 @@
 </head>
 <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.8/dist/handlebars.min.js"></script>
 <body class="bg-black">
-  <div class=" text-white border-b-4">
-    <header class="">
-      <section class="text-4xl flex space-x-96 pb-4">
-        {{!-- <img src="../../public/images/IMG_2195.png" alt="ClimateClosetLogo"> --}}
+  <div>
+    <header class="header">
+      <a href="/"><img class="images" src='images/IMG_2195.png'alt="ClimateClosetLogo"></a>
+      <section class="navigation">
+        <a class="nonstyle" href="/login">Login</a>
       </section> 
     </div>
   </header>
-  <h1>Climate Closet</h1>
     </header>
       <main class="">
         {{{ body }}}
