--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-6">
+<div class="row" >
+  <div class="col-md-6" id="create">
     <h2>Login</h2>
 
     <form class="form login-form">
@@ -15,8 +15,10 @@
         <button class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
+    <h1>Don't Have an account ?</h1>
+    <button class ="newAccount" onclick="myFunction()">Create One</button>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6" style="display: none;" id="creating">
     <h2>Signup</h2>
 
     <form class="form signup-form">
