--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="row" >
-  <div class="col-md-6" id="create">
+  <div class="col-md-6" id="login">
     <h2>Login</h2>
 
     <form class="form login-form">
@@ -15,6 +15,9 @@
         <button class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
+  </div>
+
+  <div id="create">
     <h1>Don't Have an account ?</h1>
     <button class ="newAccount" onclick="myFunction()">Create One</button>
   </div>
