--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,9 +6,12 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <a href="/customize">Customize your profile</h3>
-  </div>
-<div class="weatherinfo">WEATHER API</div>
+    <a href="/customize">Customize your profile</h3></a>
+  </div></div>
+<div class="weatherinfo">WEATHER</div>
+<div id="weatherbox">Your locations weather will show here</div>
+
 <div class="ebayShopping">EBAY ADDS</div>
+<div id="ebayAdds">Your clothing recommendations will show here</div>
 
 <script src="./js/profile.js"></script>
