--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,4 +14,4 @@
 <div class="ebayShopping">EBAY ADDS</div>
 <div id="ebayAdds">Your clothing recommendations will show here</div>
 
-<script src="./js/profile.js"></script>
+<script src="/public/js/profile.js"></script>
