--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+:root {
+  --newYellow: #FDFA00;
+  --newPink: #FF19CF;
+  --newBlue: #00afef;
+  --newGray: #222222;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -16,13 +23,18 @@ body {
 }
 
 img {
-    max-width: 275px;
+    max-height: 175px;
 }
 
 header {
     display: flex;
+    justify-content: space-between;
     border-bottom: solid;
     border-bottom-width: 4px;
+}
+
+.margin-right {
+  padding-right: 40px;
 }
 
 .navigation {
@@ -166,8 +178,11 @@ header {
   .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     transform: rotate(-45deg);
   }
-  
-  .nav-container input[type="checkbox"]:checked ~ .logo{
-    display: none;
-  }
 
+
+
+  #login {
+    background-color: var(--newGray);
+    display: inline-flex;
+    justify-content: center;
+  }
