--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,11 @@
 <body class="bg-black">
   <div>
     <header class="header">
-      <a href="/"><img class="images" src='images/IMG_2195.png'alt="ClimateClosetLogo"></a>
+      <a href="/"><img class="images" src='images/FinalLogo.png'alt="ClimateClosetLogo"></a>
       <section class="navigation">
+        <a class="nonstyle" href="/profile">Profile</a>
+      </section>
+      <section class="navigation margin-right">
         <a class="nonstyle" href="/login">Login</a>
       </section> 
     </div>
