--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,13 +1,32 @@
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
+    <h2>Welcome, <span id="name"></span>!</h2>
   </div>
 </div>
 
-<div class="row mt-4">
-  <div class="col-md-6">
-    <a href="/customize">Customize your profile</h3></a>
-  </div></div>
+<div class="col-md-6">
+    <h2>Customize Profile</h2>
+
+    <form class="form customize-form">
+      <div class="form-group">
+        <label for="location">Location:</label>
+        <input class="form-input" type="text" id="location" />
+      </div>
+      <div class="form-group">
+        <label for="gender">Gender:</label>
+        <input class="form-input" type="text" id="gender" />
+      </div>
+      <div class="form-group">
+        <label for="style">Style:</label>
+        <input class="form-input" type="text" id="style" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Submit</button>
+      </div>
+    </form>
+  </div>
+</div>
+
 <div class="weatherinfo">WEATHER</div>
 <div id="weatherbox">Your locations weather will show here</div>
 
