--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome, <span id="name"></span>!</h2>
+    <h2>Welcome, {{name}}!</h2>
   </div>
 </div>
 
@@ -24,13 +24,23 @@
         <button class="btn btn-primary" type="submit">Submit</button>
       </div>
     </form>
+
+   {{#if Customize.length}}
+   <div class="col-md-6 project-list">
+    <h3>Previous Searches</h3>
+
+    {{#each customize as |customize|}}
+    <div class="row mb-2">
+      <div class="col-md-8">
+        <h4><a href="/customize/{{customize.id}}">{{customize.location}}</a></h4>
+      </div>
+      <div class="col-md-4">
+        <button class="btn btn-sm btn-danger" data-id="{{customize.id}}">DELETE</button>
+      </div>
+     </div>
+     {{/each}}
+     </div>
+    {{/if}}
   </div>
-</div>
 
-<div class="weatherinfo">WEATHER</div>
-<div id="weatherbox">Your locations weather will show here</div>
-
-<div class="ebayShopping">EBAY ADDS</div>
-<div id="ebayAdds">Your clothing recommendations will show here</div>
-
-<script src="/public/js/profile.js"></script>
+<script src="./js/profile.js"></script>
