--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
   <title>Climate Closet</title>
@@ -20,5 +20,48 @@
       </main>
   </div>
   </body>
+
+</html> --}}
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Climate Closet</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.8/dist/handlebars.min.js"></script>
+<bodyclass="bg-black">
+  <div class="flex-column justify-space-around">
+    <header class="header">
+      <h1>
+        <a href="/"><img class="images" src='images/IMG_2195.png'alt="ClimateClosetLogo"></a>
+      </h1>
+      <nav class="navigation">
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+        <a href="/profile">Profile</a> |
+        <button class="no-button" id="logout">logout</button>
+        {{else}}
+        <a class="nonstyle" href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main class="container container-fluid mt-5">
+      <!-- Render the sub layout -->
+      {{{ body }}}
+    </main>
+    <footer>
+      
+    </footer>
+  </div>
+
+  <!-- Render script for logged in users only -->
+  {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
+</body>
 
 </html>
