--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -28,18 +28,12 @@
   
    <div class="search-list">
      <h3>{{name}}'s Previous Searches</h3>
-     <p></p>
-      {{#each Customize as |location|}}
-      <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/customize/{{customize.id}}">{{location}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{customize.id}}">DELETE</button>
-     </div>
-     </div>
-      {{/each}}
-     </div>
+     <p>Location: {{location}}</p>
+      <ul>
+         {{#each customize}}
+         <li>{{this.location}} - {{this.style}}</li>
+         {{/each}}
+        </ul>
  </div>
 
 <script src="./js/profile.js"></script>
