--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,15 +10,15 @@
     <form class="form customize-form">
       <div class="form-group">
         <label for="gender-signup">gender:</label>
-        <select name="gender-options" id="gender-signup">
+        <select name="gender-options" id="gender">
           <option value ="male">male</option>
           <option value ="female">female</option>
           <option value ="other">other</option>
           </select>
       </div>
       <div class="form-group">
-        <label for="seasons">season:</label>
-        <select name="season-options" id="seasons">
+        <label for="season">Season:</label>
+        <select name="season-options" id="season">
           <option value ="Summer">Summer</option>
           <option value ="Fall">Fall</option>
           <option value ="Winter">Winter</option>
