--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,7 +4,8 @@
   </div>
 </div>
 
-<div class="col-md-6">
+<div class="col-md-6 ">
+  <div class="container3">
     <h2>Customize Profile</h2>
 
     <form class="form customize-form">
@@ -24,9 +25,9 @@
         <button class="btn btn-primary" type="submit">Submit</button>
       </div>
     </form>
-
+  </div>
   
-   <div class="search-list">
+   <div class="search-list container2">
      <h3>{{name}}'s Previous Searches</h3>
      <p>Location: {{location}}</p>
       <ul>
@@ -34,6 +35,6 @@
          <li>{{this.location}} - {{this.style}}</li>
          {{/each}}
         </ul>
- </div>
-
+    </div>
+</div>
 <script src="./js/profile.js"></script>
