--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,49 @@ header {
     cursor: pointer;
 }
 
+.contain, .container2, .container3 {
+  display: block;
+  max-width: 800px;
+    width: 90%;
+    margin: auto;
+  text-align: center;
+  transition: 1s;
+  height: 175px;
+  border: 8px solid black;
+  background-color: #111111;
+
+  border-radius: 5px;
+  padding-top: 4px;
+  margin-top: 40px;
+ 
+}
+
+.contain {
+  box-shadow: 0px 2px 8px 8px var(--newPink);
+  text-decoration: underline var(--newPink);
+}
+
+.container2 {
+  box-shadow: 0px 2px 8px 8px var(--newBlue);
+  text-decoration: underline var(--newBlue);
+}
+.container3 {
+  box-shadow: 0px 2px 8px 8px var(--newYellow);
+  text-decoration: underline var(--newYellow);
+}
+
+input[type="text"], textarea {
+
+  color: white;
+  background-color : black !important; 
+
+}
+input[type="password"], textarea {
+  color: white;
+  background-color : black !important;
+
+}
+
   
   body {
     font-family: sans-serif;
@@ -179,10 +222,18 @@ header {
     transform: rotate(-45deg);
   }
 
+#create {
+  margin-top: 40px;
+}
 
+  #Login {
+    font-size: 30px;
+    text-align: left;
+    padding-left: 200px;
+    padding-bottom: 22px;
+  }
 
-  #login {
-    background-color: var(--newGray);
-    display: inline-flex;
-    justify-content: center;
+  #info {
+    font-size: 20px;
+    padding-bottom: 20px;
   }
