--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,28 +1,28 @@
-<div class="row" >
-  <div class="col-md-6" id="login">
-    <h2>Login</h2>
-
+<div class="row" id="log">
+  <section class="contain">
     <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
+      <h2 id="Login">Login</h2>
+      <div class="form-group" id="info">
+        <label for="email-login">Email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
+        <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
+  </section>
   </div>
 
   <div id="create">
-    <h1>Don't Have an account ?</h1>
+    <h1 >Don't Have an account ?</h1>
     <button class ="newAccount" onclick="myFunction()">Create One</button>
   </div>
-  <div class="col-md-6" style="display: none;" id="creating">
-    <h2>Signup</h2>
+  <div class="container2" style="display: none;" id="creating">
+    <h2 id="Login">Signup</h2>
 
     <form class="form signup-form">
       <div class="form-group">
