--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,5 @@
 <div class="navbar">
+  {{!-- This is the start of the hamburger-menu --}}
   <div class="container nav-container">
     <input class="checkbox" type="checkbox" name="" id="" />
     <div class="hamburger-lines">
