--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -11,7 +11,7 @@
 
     <form class="form customize-form">
       <div class="form-group">
-        <label for="gender-signup">gender:</label>
+        <label for="gender">gender:</label>
         <select name="gender-options" id="gender">
           <option value ="male">male</option>
           <option value ="female">female</option>
