--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,8 +29,9 @@ img {
 header {
     display: flex;
     justify-content: space-between;
-    border-bottom: solid;
+    border-bottom: solid var(--newYellow);
     border-bottom-width: 4px;
+    box-shadow: 0px 1px 10px 1px var(--newYellow);
 }
 
 .margin-right {
@@ -45,6 +46,42 @@ header {
     padding-bottom: 10px;
     cursor: pointer;
 }
+
+.mainContainer {
+  display: block;
+  min-width: 800px;
+    width: 90%;
+    margin: auto;
+  text-align: center;
+  transition: 1s;
+  height: 375px;
+  border: 8px solid black;
+  background-color: #111111;
+  border-radius: 5px;
+  padding-top: 4px;
+  margin-top: 40px;
+  box-shadow: 0px 2px 8px 8px #00afef;
+  text-decoration: underline #00afef
+}
+
+.listContainer {
+  display: inline-flex;
+  margin-left: 30px;
+  max-width: 220px;
+    width: 90%;
+    margin: auto;
+  text-align: center;
+  transition: 1s;
+  height: 220px;
+  border: 8px solid black;
+  background-color: #111111;
+  border-radius: 5px;
+  padding-top: 4px;
+  margin-top: 40px;
+  box-shadow: 0px 2px 8px 8px var(--newPink);
+  text-decoration: underline var(--newPink);
+}
+
 
 .contain, .container2, .container3 {
   display: block;
@@ -67,10 +104,9 @@ header {
   box-shadow: 0px 2px 8px 8px var(--newPink);
   text-decoration: underline var(--newPink);
 }
-
 .container2 {
-  box-shadow: 0px 2px 8px 8px var(--newBlue);
-  text-decoration: underline var(--newBlue);
+  box-shadow: 0px 2px 8px 8px #00afef;
+  text-decoration: underline #00afef;
 }
 .container3 {
   box-shadow: 0px 2px 8px 8px var(--newYellow);
@@ -237,3 +273,8 @@ input[type="password"], textarea {
     font-size: 20px;
     padding-bottom: 20px;
   }
+
+
+.textY {
+  color: var(--newYellow);
+}
