working on routes

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -31,4 +31,11 @@
       </div>
     </form>
 
+  </div>
+</div>
+<br />
+<div>
+ Testing: {{season}} and {{price}}
+</div>
+
 <script src="./js/profile.js"></script>
