added to custom routes, homeroutes, and adjusted seeds & index

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -38,15 +38,25 @@
 
       <div class="list">
         <div class="listContainer">
-
+          Outfit 1
+           <br />
+            <br />
+          {{name}}
         </div>
 
         <div class="listContainer">
-          
+          Outfit 2
+           <br />
+            <br />
+          {{season}} and {{gender}}
         </div>
 
         <div class="listContainer">
-          
+          Outfit 3
+          <br />
+           {{product_name}}
+           <br />
+           Price: {{price}}
         </div>
       </div>
       
@@ -56,8 +66,5 @@
   </div>
 </div>
 <br />
-<div>
- Testing: {{season}} and {{price}}
-</div>
 
 <script src="./js/profile.js"></script>
