--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -26,7 +26,7 @@
           </select>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary" type="submit"onclick="getProductSuggestions()">Submit</button>
       </div>
     </form>
   </div>
@@ -35,29 +35,40 @@
 <div class="mainContainer" id="outfits">
 
     <h2>Recommended Outfits</h2>
-
-      <div class="list">
-        <div class="listContainer">
-          Outfit 1
-           <br />
-            <br />
-          {{name}}
-        </div>
-
-        <div class="listContainer">
-          Outfit 2
-           <br />
-            <br />
-          {{season}} and {{gender}}
-        </div>
-
-        <div class="listContainer">
-          Outfit 3
-          <br />
-           {{product_name}}
-           <br />
-           Price: {{price}}
-        </div>
+    
+    <div class="list">
+      <div class="listContainer">
+        Outfit 1
+        <br />
+        <br />
+        {{#if products.[0]}}
+        {{ products.[0].name }}
+        {{else}}
+        No suggestion for Outfit 1
+        {{/if}}
+      </div>
+    
+      <div class="listContainer">
+        Outfit 2
+        <br />
+        <br />
+        {{#if products.[1]}}
+        {{ products.[1].name }}
+        {{else}}
+        No suggestion for Outfit 2
+        {{/if}}
+      </div>
+    
+      <div class="listContainer">
+        Outfit 3
+        <br />
+        {{#if products.[2]}}
+        {{ products.[2].name }}
+        <br />
+        Price: {{ products.[2].price }}
+        {{else}}
+        No suggestion for Outfit 3
+        {{/if}}
       </div>
       
   </div>
