--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -41,6 +41,7 @@
         #1
          <br />
       {{#if products.[0]}}
+        <a href="/profile"><img class="images" src={{product.[0].image_url}}alt="{{product.[0].product_name}}"></a>
         {{ products.[0].name }}
         {{ products.[0].price }}
         {{else}}
@@ -56,8 +57,8 @@
       <div class="listContainer">
         #2
         <br />
-        <br />
         {{#if products.[1]}}
+        <a href="/profile"><img class="images" src={{product.[1].image_url}}alt="{{product.[1].product_name}}"></a>
         {{ products.[1].name }}
         {{ products.[1].price }}
         {{else}}
@@ -73,6 +74,7 @@
         #3
         <br />
         {{#if products.[2]}}
+        <a href="/profile"><img class="images" src={{product.[2].image_url}}alt="{{product.[2].product_name}}"></a>
         {{ products.[2].name }}
         {{ products.[2].price }}
         <br />
