--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -47,10 +47,11 @@
         {{else}}
         <a href="https://www.temu.com/ul/kuiper/un9.html?subj=coupon-un&_bg_fs=1&_p_jump_id=895&_x_vst_scene=adg&goods_id=601099514047445&sku_id=17592200749708&adg_ctx=a-3a6b8173~c-76f6e53d&_x_ads_sub_channel=shopping&_p_rfs=1&_x_ns_prz_type=-1&_x_ns_sku_id=17592200749708&mrk_rec=1&_x_ads_channel=google&_x_gmc_account=647900107&_x_login_type=Google&_x_ads_account=1919904652&_x_ads_set=20589761422&_x_ads_id=152582980943&_x_ads_creative_id=675120921070&_x_ns_source=g&_x_ns_gclid=CjwKCAjwyNSoBhA9EiwA5aYlb0EurPMhBZ4EsRNrZ9TAC13BONCWF3_HwviGdUr6R4TsUE-Jm3ISFRoCvxsQAvD_BwE&_x_ns_placement=&_x_ns_match_type=&_x_ns_ad_position=&_x_ns_product_id=17592200749708&_x_ns_target=&_x_ns_devicemodel=&_x_ns_wbraid=CjkKCQjwpc-oBhDNARIoAL3VsBGPaozeIiomZGxyK_oegKSvLDCxWxXa7Wkw53WiKVgsXEVN7hoCN88&_x_ns_gbraid=0AAAAAo4mICET4ai1dy4xRPwTrOtSkls39&_x_ns_targetid=pla-2204946870156&gclid=CjwKCAjwyNSoBhA9EiwA5aYlb0EurPMhBZ4EsRNrZ9TAC13BONCWF3_HwviGdUr6R4TsUE-Jm3ISFRoCvxsQAvD_BwE"><img class="images" src='images/MenWinterOutfit.jpg'alt="MenWinterOutfit"></a>
          <br />
+    <div class="display-name">
          Men's Hooded Winter Jumpsuit
         <br />
         Price: $21.87
-
+    </div>
         {{/if}}
       </div>
     
