--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,20 +75,26 @@ header {
   text-decoration: underline #00afef
 }
 
+a {
+  justify-content: center;
+}
+
 .listContainer {
   display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
   margin-left: 30px;
-  max-width: 220px;
+  max-width: 250px;
     width: 90%;
     margin: auto;
   text-align: center;
   transition: 1s;
-  height: 220px;
+  height: 275px;
   border: 8px solid black;
   background-color: black;
   border-radius: 5px;
   padding-top: 4px;
-  margin-top: 40px;
+  margin-top: 27px;
   box-shadow: 0px 2px 8px 8px var(--newPink);
   text-decoration: underline var(--newPink);
 }
