--- a/views/outfits.handlebars
+++ b/views/outfits.handlebars
@@ -1,30 +1,91 @@
+<div class="row">
+  <div class="col-auto">
+    <h2>Welcome, {{name}}!</h2>
+  </div>
+</div>
+
+<div class="col-md-6 ">
+  <div class="container2">
+    <h2>Customize Profile</h2>
+    <form class="form customize-form">
+      <div class="form-group">
+        <label for="gender">gender:</label>
+        <select name="gender-options" id="gender">
+          <option value ="male">male</option>
+          <option value ="female">female</option>
+          <option value ="other">other</option>
+          </select>
+      </div>
+  
+      <div class="form-group">
+        <label for="season">Season:</label>
+        <select name="season-options" id="season">
+          <option value ="Summer">Summer</option>
+          <option value ="Fall">Fall</option>
+          <option value ="Winter">Winter</option>
+          </select>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit"onclick="getProductSuggestions()">Submit</button>
+      </div>
+    </form>
+  </div>
+</div>
+
 <div class="mainContainer" id="outfits">
 
     <h2>Recommended Outfits</h2>
-
-      <div class="list">
-        <div class="listContainer">
-          Outfit 1
-           <br />
-        {{Customize.gender}}  
+    
+    <div class="list">
+      <div class="listContainer">
+        #1
          <br />
-          {{Customize.season}}
-        </div>
+      {{#if products.[0]}}
+        <a href="/profile"><img class="images" src={{product.[0].image_url}}alt="{{product.[0].product_name}}"></a>
+        {{ products.[0].name }}
+        {{ products.[0].price }}
+        {{else}}
+        <a href="https://www.temu.com/ul/kuiper/un9.html?subj=coupon-un&_bg_fs=1&_p_jump_id=895&_x_vst_scene=adg&goods_id=601099514047445&sku_id=17592200749708&adg_ctx=a-3a6b8173~c-76f6e53d&_x_ads_sub_channel=shopping&_p_rfs=1&_x_ns_prz_type=-1&_x_ns_sku_id=17592200749708&mrk_rec=1&_x_ads_channel=google&_x_gmc_account=647900107&_x_login_type=Google&_x_ads_account=1919904652&_x_ads_set=20589761422&_x_ads_id=152582980943&_x_ads_creative_id=675120921070&_x_ns_source=g&_x_ns_gclid=CjwKCAjwyNSoBhA9EiwA5aYlb0EurPMhBZ4EsRNrZ9TAC13BONCWF3_HwviGdUr6R4TsUE-Jm3ISFRoCvxsQAvD_BwE&_x_ns_placement=&_x_ns_match_type=&_x_ns_ad_position=&_x_ns_product_id=17592200749708&_x_ns_target=&_x_ns_devicemodel=&_x_ns_wbraid=CjkKCQjwpc-oBhDNARIoAL3VsBGPaozeIiomZGxyK_oegKSvLDCxWxXa7Wkw53WiKVgsXEVN7hoCN88&_x_ns_gbraid=0AAAAAo4mICET4ai1dy4xRPwTrOtSkls39&_x_ns_targetid=pla-2204946870156&gclid=CjwKCAjwyNSoBhA9EiwA5aYlb0EurPMhBZ4EsRNrZ9TAC13BONCWF3_HwviGdUr6R4TsUE-Jm3ISFRoCvxsQAvD_BwE"><img class="images" src='images/MenWinterOutfit.jpg'alt="MenWinterOutfit"></a>
+         <br />
+         Men's Hooded Winter Jumpsuit
+        <br />
+        Price: $21.87
 
-        <div class="listContainer">
-          Outfit 2
-           <br />
-            <br />
-          {{season}} and {{gender}}
-        </div>
-
-        <div class="listContainer">
-          Outfit 3
+        {{/if}}
+      </div>
+    
+      <div class="listContainer">
+        #2
+        <br />
+        {{#if products.[1]}}
+        <a href="/profile"><img class="images" src={{product.[1].image_url}}alt="{{product.[1].product_name}}"></a>
+        {{ products.[1].name }}
+        {{ products.[1].price }}
+        {{else}}
+        <a href="https://www.temu.com/ul/kuiper/un9.html?subj=coupon-un&_bg_fs=1&_p_jump_id=895&_x_vst_scene=adg&goods_id=601099511926297&sku_id=17592187913236&adg_ctx=a-010fcae5~c-6d9e0554&_x_ads_sub_channel=shopping&_p_rfs=1&_x_ns_prz_type=-1&_x_ns_sku_id=17592187913236&mrk_rec=1&_x_ads_channel=google&_x_gmc_account=647900107&_x_login_type=Google&_x_ads_account=1919904652&_x_ads_set=20546105973&_x_ads_id=152164234943&_x_ads_creative_id=673998793181&_x_ns_source=g&_x_ns_gclid=CjwKCAjwyNSoBhA9EiwA5aYlb4rO5qUJdBOnz5_lZrznCD-geElUIfNGx2WUKZA0APuJveIaZsMLDxoCg_EQAvD_BwE&_x_ns_placement=&_x_ns_match_type=&_x_ns_ad_position=&_x_ns_product_id=17592187913236&_x_ns_target=&_x_ns_devicemodel=&_x_ns_wbraid=CjkKCQjwpc-oBhDNARIoAL3VsBEy_5avmxe2Rl7bPWfwOHiPLXk-xPkQxvoX7vN_DRXXtMsitxoCIxQ&_x_ns_gbraid=0AAAAAo4mICEAd91znWofwh9yxzaZar83S&_x_ns_targetid=pla-2205686411693&gclid=CjwKCAjwyNSoBhA9EiwA5aYlb4rO5qUJdBOnz5_lZrznCD-geElUIfNGx2WUKZA0APuJveIaZsMLDxoCg_EQAvD_BwE&is_login_reload=1"><img class="images" src='images/FemaleFallOutfit.jpeg'alt="FemaleFallOutfit"></a>
+        <br />
+         Female Fall Plaid Cardigan
           <br />
-           {{product_name}}
-           <br />
-           Price: {{price}}
-        </div>
+          Price: $13.49
+        {{/if}}
+      </div>
+
+      <div class="listContainer">
+        #3
+        <br />
+        {{#if products.[2]}}
+        <a href="/profile"><img class="images" src={{product.[2].image_url}}alt="{{product.[2].product_name}}"></a>
+        {{ products.[2].name }}
+        {{ products.[2].price }}
+        <br />
+        Price: {{ products.[2].price }}
+        {{else}}
+        <a href="https://www.temu.com/ul/kuiper/un9.html?subj=coupon-un&_bg_fs=1&_p_jump_id=895&_x_vst_scene=adg&goods_id=601099515045821&sku_id=17592206349312&adg_ctx=a-074d96f2~c-a96c9b21&_x_ads_sub_channel=shopping&_p_rfs=1&_x_ns_prz_type=-1&_x_ns_sku_id=17592206349312&mrk_rec=1&_x_ads_channel=google&_x_gmc_account=647900107&_x_login_type=Google&_x_ads_account=1919904652&_x_ads_set=20589343380&_x_ads_id=151324002662&_x_ads_creative_id=675388423627&_x_ns_source=g&_x_ns_gclid=CjwKCAjwyNSoBhA9EiwA5aYlb2Iy1kCFIUnjp_Ti4bl8fMli3r4Bw4oqcQb1UkqsgE5S-w1CHe8LZBoCsqEQAvD_BwE&_x_ns_placement=&_x_ns_match_type=&_x_ns_ad_position=&_x_ns_product_id=17592206349312&_x_ns_target=&_x_ns_devicemodel=&_x_ns_wbraid=CjkKCQjwpc-oBhDNARIoAL3VsBHZrANe06dRkiJWWDWvL08y6emoNFPjJwwUwudqzfta0s_S9BoC4KA&_x_ns_gbraid=0AAAAAo4mICG_YKj93wiixOkGl_bKHObQW&_x_ns_targetid=pla-2088489942854&gclid=CjwKCAjwyNSoBhA9EiwA5aYlb2Iy1kCFIUnjp_Ti4bl8fMli3r4Bw4oqcQb1UkqsgE5S-w1CHe8LZBoCsqEQAvD_BwE"><img class="images" src='images/MenSummerOutfit.jpg'alt="MenSummerOutfit"></a>
+        <br />
+        Male Summer 2-Piece
+          <br />
+        Price: $14.75
+        {{/if}}
       </div>
       
   </div>
@@ -33,3 +94,5 @@
   </div>
 </div>
 <br />
+
+<script src="./js/profile.js"></script>
